--- a/src/app/propos/propos.component.html
+++ b/src/app/propos/propos.component.html
@@ -6,14 +6,14 @@
       <div class="col-md-8 presentation">
         <h1>Je m'appelle Rémi Papillier</h1>
         <h2>Passioné d'informatique et de design,<br /> je suis curieux et j'ai un bon relationnel</h2>
-        <p>J'ai 21 ans et je travaille actuellement comme apprenti développeur (application/web) chez General Electric</p><br />
-        <p>Contact : <a class="sendmail" href="mailto:remi-papillier@hotmail.fr">remi-papillier@hotmail.fr</a></p>
+        <p>J'ai 22 ans et je travaille actuellement comme apprenti développeur (application/web) chez General Electric</p><br />
+        <p>Contact : <a class="sendmail" href="mailto:remi-papillier@hotmail.fr">remi.papillier@gmail.com</a></p>
       </div>
       <div class="col-md-4 links">
         <div class="cv">
           <div class="cv-text">Téléchargez mon CV</div>
           <div class="cv-logo">
-              <a href="../../assets/CV_remi.pdf" target="_blank" download><img src="../../assets/images/logo-cv.png" style="width: 35px; height: 50px;"></a>
+              <a href="../../assets/CV_RemiPapillier.pdf" target="_blank" download><img src="../../assets/images/logo-cv.png" style="width: 35px; height: 50px;"></a>
           </div>
         </div>
         <div class="social">
@@ -29,6 +29,39 @@
 
   <div class="title">- Projets Personnels -</div>
   <section id="timeline">
+
+    <div class="tl-item">
+
+      <div class="tl-bg" style="background-image: url('../../assets/images/site-cv.PNG')"></div>
+
+      <div class="tl-year">
+        <p class="f2 heading--sanSerif">Site - CV</p>
+      </div>
+
+      <div class="tl-content">
+        <h1 class="f3 text--accent ttu">Création d'un site personnel</h1>
+        <p>Développement sur Angular<br />Déploiement intégration continue netlify<br />HTML/CSS/JS</p>
+        <a href="https://github.com/RemiPapillier/webCV" target="_blank"><img src="../../assets/images/github.png" style="width: 50px; height: 50px; filter:brightness(0) invert(1)"></a>
+        <a href="https://remipapillier.fr" target="_blank"><img src="../../assets/images/website.png" style="width: 50px; height: 50px; filter:brightness(0) invert(1)"></a>
+      </div>
+    </div>
+
+    <div class="tl-item">
+
+      <div class="tl-bg" style="background-image:  url('../../assets/images/ludika.png')"></div>
+
+      <div class="tl-year">
+        <p class="f2 heading--sanSerif">Mobile - Ludika</p>
+      </div>
+
+      <div class="tl-content">
+        <h1 class="f3 text--accent ttu">Application ludoéducative</h1>
+        <p>Développement mobile crossplateforme<br />Flutter, Firebase, Dart<br />Analyse UX/UI</p>
+        <a href="https://github.com/RemiPapillier/Ludika" target="_blank"><img src="../../assets/images/github.png" style="width: 50px; height: 50px; filter:brightness(0) invert(1)"></a>
+      </div>
+
+    </div>
+
     <div class="tl-item">
       <div class="tl-bg utbm" style="background-image: url('../../assets/images/demineur.PNG')"></div>
       <div class="tl-year">
@@ -44,34 +77,20 @@
 
     </div>
 
-    <div class="tl-item">
-
-      <div class="tl-bg" style="background-image:  url('../../assets/images/graph-fsr.png')"></div>
-
-      <div class="tl-year">
-        <p class="f2 heading--sanSerif">Instrum - FSR</p>
-      </div>
-
-      <div class="tl-content">
-        <h1 class="f3 text--accent ttu">Projet Capteur de Mastication</h1>
-        <p>Développement d'un capteur de mastication<br />Instrumentation avec Arduino/Raspberry<br />Visualisation en Java (JFreeChart)</p>
-        <a href="https://github.com/RemiPapillier/capteur_FSR" target="_blank"><img src="../../assets/images/github.png" style="width: 50px; height: 50px; filter:brightness(0) invert(1)"></a>
-      </div>
-
-    </div>
 
     <div class="tl-item">
 
-      <div class="tl-bg" style="background-image: url('../../assets/images/site-cv.PNG')"></div>
+      <div class="tl-bg" style="background-image: url('../../assets/images/systeme.PNG')"></div>
 
       <div class="tl-year">
-        <p class="f2 heading--sanSerif">Site - CV</p>
+        <p class="f2 heading--sanSerif">Site - SE</p>
       </div>
 
       <div class="tl-content">
-        <h1 class="f3 text--accent ttu">Création d'un site personnel</h1>
-        <p>Développement sur Angular avec Bootstrap<br />Déploiement intégration continue netlify<br />HTML/CSS/JS</p>
-        <a href="https://github.com/RemiPapillier/webCV" target="_blank"><img src="../../assets/images/github.png" style="width: 50px; height: 50px; filter:brightness(0) invert(1)"></a>
+        <h1 class="f3 text--accent ttu">Résolveur Systeme Expert</h1>
+        <p>Développement web Python Flask<br />Déploiement Heroku<br />HTML/CSS/JS et Bootstrap</p>
+        <a href="https://github.com/RemiPapillier/Systeme_Expert" target="_blank"><img src="../../assets/images/github.png" style="width: 50px; height: 50px; filter:brightness(0) invert(1)"></a>
+        <a href="https://systeme-expert.herokuapp.com/" target="_blank"><img src="../../assets/images/website.png" style="width: 50px; height: 50px; filter:brightness(0) invert(1)"></a>
       </div>
     </div>
   </section>
