--- a/src/app/competence/competence.component.html
+++ b/src/app/competence/competence.component.html
@@ -8,7 +8,7 @@
                             </div>
                             <div class="back">
                                <h2>Techniques</h2>
-                               <p>◦ Développement:<br /> HTML/CSS/JS , C# , Java , C/C++ , SQL<br />◦ Notions de méthodes agiles et management</p>
+                               <p>◦ Développement web/mobile, UX/UI<br/>◦ Github, Docker, Intégration continue<br />◦ Méthodes agiles et management</p>
                             </div>
                         </div>
                     <div class="flip left">
@@ -17,7 +17,7 @@
                             </div>
                             <div class="back">
                                <h2>Technologies</h2>
-                               <p>◦ Web Angular/Bootstrap, Ruby on Rails<br />◦ WordPress (Divi theme), .Net, jQuery<br />◦ GitHub, déploiement et intégration continue</p>
+                               <p>◦ Python, HTML/CSS/JS, Java <br />◦ Flutter, Angular, Docker, Firebase<br />◦ JQuery, SQL, Dart, Flask</p>
                             </div>
                         </div>
             </div>
@@ -28,7 +28,7 @@
                                 </div>
                                 <div class="back">
                                    <h2>Langues</h2>
-                                   <p>◦ Anglais, pratique professionnelle<br />Bulats niveau C1 et 1 mois en entreprise à l'étranger<br />◦ Francais, langue maternelle</p>
+                                   <p>◦ Anglais, pratique professionnelle<br />Linguaskill C1 + 1 mois en entreprise à l'étranger<br />◦ Francais, langue maternelle</p>
                                 </div>
                             </div>
                         <div class="flip right">
@@ -37,7 +37,7 @@
                                 </div>
                                 <div class="back">
                                    <h2>Social</h2>
-                                   <p>◦ Bon esprit d'équipe<br />Travailler en équipe / Manager une équipe<br />◦ Ambitieux, organisé, autonome et dynamique</p>
+                                   <p>◦ Bon esprit d'équipe<br />Prise d'initiative, leadership<br />◦ Organisé, autonome et dynamique</p>
                                 </div>
                             </div>
                 </div>
