clean + update cv

--- a/src/app/competence/competence.component.html
+++ b/src/app/competence/competence.component.html
@@ -17,7 +17,7 @@
                             </div>
                             <div class="back">
                                <h2>Technologies</h2>
-                               <p>◦ Python, HTML/CSS/JS, Java <br />◦ Flutter, Angular, Docker, Firebase<br />◦ JQuery, SQL, Dart, Flask</p>
+                               <p>◦ Python, HTML/CSS/JS, Java <br />◦ React, Flutter, Angular, Firebase<br />◦ JQuery, SQL, Dart, Flask</p>
                             </div>
                         </div>
             </div>
@@ -37,7 +37,7 @@
                                 </div>
                                 <div class="back">
                                    <h2>Social</h2>
-                                   <p>◦ Bon esprit d'équipe<br />Prise d'initiative, leadership<br />◦ Organisé, autonome et dynamique</p>
+                                   <p>◦ Bon esprit d'équipe<br />◦ Prise d'initiative, leadership<br />◦ Organisé, autonome et dynamique</p>
                                 </div>
                             </div>
                 </div>
